# baybay

./: README.md  app.py  builder.py  loader.py  main.py  pyproject.toml  test.py  version.txt
code/: discord.py  linux_discord.py
libraries/: baybay.py  credentials.py  sandboxevasion.py
