[project]
name = "cmdcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "discord-py>=2.5.2",
    "discord-webhook>=1.4.1",
    "keyboard>=0.13.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "prettytable>=3.16.0",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pycryptodome>=3.23.0",
    "pygithub>=2.6.1",
    "pyinstaller>=6.14.1",
    "pyperclip>=1.9.0",
    "pyscreeze>=1.0.1",
    "pytelegrambotapi>=4.27.0",
    "pywin32>=310",
    "scipy>=1.16.0",
    "selenium>=4.34.0",
    "sounddevice>=0.5.2",
    "textual>=3.5.0",
    "webdriver-manager>=4.0.2",
]
